[tool.poetry]
name = "blocking-py"
version = "0.1.0"
description = ""
authors = ["Tymoteusz Strojny <tymek.strojny@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
annoy = "^1.17.3"
hnswlib = "^0.8.0"
numpy = "^2.0.1"
pandas = "^2.2.2"
scipy = "^1.14.1"
mlpack = "^4.5.0"
llvmlite = "^0.43.0"
pynndescent = "^0.5.13"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
